# VOFD

./: LICENSE.txt  README.md  pyproject.toml
VOFD/: README.md  pyproject.toml
VOFD/examples/: bifurcation_setup.py  simulation_setup.py
VOFD/vofd/: __init__.py  maxima.py  plot_data.py  sim_manager.py  vo_core.py
examples/: bif_5Dvo_Lorenz.py  bif_vo_chen.py  sim_5Dvo_Lorenz.py  sim_vo_chen.py  sim_vo_relaxation.py  sim_vo_ricatti.py
vofd/: __init__.py  plot_data.py  sim_manager.py  vo_core.py
